tree-sitter-cabal/test/corpus/comments.txt
================================================================================
Column-0 comment between two fields in an indented section
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar
-- comment in middle of block
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Column-0 comment between a field and a conditional (hls pattern)
================================================================================

cabal-version: 3.4
name: pkg

test-suite ts
  default-extensions: OverloadedStrings
-- comment about flags
  if flag(eval)
    cpp-options: -Dhls_eval

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (test_suite
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (flag_token))))))))))

================================================================================
Multiple consecutive column-0 comments inside an indented section
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar
-- comment 1
-- comment 2
-- comment 3
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (comment)
        (comment)
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Column-0 comment between two conditionals inside a library
================================================================================

cabal-version: 3.4
name: pkg

library
  if flag(eval)
    cpp-options: -Dhls_eval
-- comment between conditionals
  if flag(ormolu)
    cpp-options: -Dhls_ormolu

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (flag_token))))))
        (comment)
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (flag_token))))))))))

================================================================================
Column-0 comment between sections stays outside both sections
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar

-- this comment is between sections
executable bin
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))
    (comment)
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Inline trailing comment after a field value
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar -- trailing
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier))
          (comment))
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Comments at same indent as if, between condition and deeper body
================================================================================

cabal-version: 3.4
name: pkg

library
  if !os(windows) && flag(dynamic)
  -- comment at same indent as if
  -- another comment
    ghc-options: -dynamic

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_and
              (predicate_not
                (predicate_call
                  (identifier)
                  (predicate_arg
                    (identifier))))
              (predicate_call
                (identifier)
                (predicate_arg
                  (identifier))))
            (property_or_conditional_block
              (comment)
              (comment)
              (field
                (field_name)
                (field_value
                  (flag_token))))))))))
