tree-sitter-cabal/test/corpus/conditional.txt
================================================================================
Simplest conditional: single if
================================================================================

cabal-version: 3.2
name: singe-if

common foo
    if flag(do-if)
      foo: bar

library
    if flag(do-if)
      foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier))))))))
    (library
      (section_type)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier))))))))))

================================================================================
Conditional with else
================================================================================

cabal-version: 3.2
name: singe-if

library
    if flag(do-if)
      foo: bar
    else
      foo: baz

test-suite foo-test
    if flag(do-if)
      foo: bar
    else
      foo: baz

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier)))))
          (else_clause
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier))))))))
    (test_suite
      (section_type)
      (section_name)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier)))))
          (else_clause
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier))))))))))

================================================================================
Conditional with elif
================================================================================

cabal-version: 3.2
name: singe-if

common foo
    if flag(do-if)
      foo: bar
    elif flag(no-if)
      foo: baz
    else
      foo: qux

library
    if flag(do-if)
      foo: bar
    elif flag(no-if)
      foo: baz
    else
      foo: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier)))))
          (elif_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier)))))
          (else_clause
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier))))))))
    (library
      (section_type)
      (property_or_conditional_block
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier)))))
          (elif_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier)))))
          (else_clause
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (identifier))))))))))
