tree-sitter-cabal/test/corpus/fields.txt
================================================================================
Single value fields
================================================================================

cabal-version: 1.0
name: a-package

common section
  field-one: value-one
  field-two:
    value-one

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Comment in continuation list
================================================================================

cabal-version: 3.0
name: pkg

library
  exposed-modules:
    Foo.Bar
    -- intentionally exclude Baz
    Foo.Qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (module_name)
            (comment)
            (module_name)))))))

================================================================================
build-depends with version constraints
================================================================================

cabal-version: 3.0
name: pkg

library
  build-depends:
      base >= 4.14 && < 5
    , bytestring ^>= 0.11
    , text

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (constraint_op)
            (version)
            (constraint_op)
            (constraint_op)
            (integer)
            (identifier)
            (constraint_op)
            (version)
            (identifier)))))))

================================================================================
exposed-modules with module and bare-uppercase items
================================================================================

cabal-version: 3.0
name: pkg

library
  exposed-modules:
    Codec.Binary.Base16
    Paths_pkg

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (module_name)
            (identifier)))))))

================================================================================
Multiple value fields
================================================================================

cabal-version: 1.0
name: a-package

common section
  field-a: value-one value-two value-three
  field-c: value-one
    value-two
    value-three
  field-f:
    value-one
    value-two
    value-three

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)
            (identifier)))))))

================================================================================
tested-with with brace version set
================================================================================

cabal-version: 3.0
name: pkg
tested-with: GHC == {9.14.1, 9.12.2, 9.10.3, 9.8.4, 9.6.7}

library
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (constraint_op)
        (version)
        (version)
        (version)
        (version)
        (version))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
ghc-options with -with-rtsopts=-N
================================================================================

cabal-version: 3.0
name: pkg

executable foo
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (flag_token)
            (flag_token)
            (flag_token)
            (flag_token)))))))

================================================================================
build-depends with sublibrary qualified name
================================================================================

cabal-version: 3.0
name: pkg

library
  build-depends:
      base
    , haskell-language-server:hls-cabal-plugin

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (qualified_name)))))))

================================================================================
description with angle-bracketed URL
================================================================================

cabal-version: 3.0
name: pkg
description: see <https://example.com/x>

library
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (constraint_op)
        (url)
        (constraint_op))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
quoted string with -- inside (not a comment)
================================================================================

cabal-version: 3.0
name: pkg

executable foo
  ghc-options: "-with-rtsopts=-T -Iw1 --disable-delayed-os-memory-return"

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (quoted_string)))))))

================================================================================
Prose colon is not a qualified name
================================================================================

description:
  Libraries: a framework. Note:this is one.

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (text_fragment)
        (identifier)
        (identifier)
        (qualified_name)
        (identifier)
        (identifier)))))

================================================================================
Renaming keywords are distinct from identifiers
================================================================================

library
  mixins:
      str-string hiding ( Foo )
    , containers (Data.Map as Map)
  reexported-modules: Impl as Iface

--------------------------------------------------------------------------------

(cabal
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (renaming_keyword)
            (identifier)
            (identifier)
            (module_name)
            (renaming_keyword)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)
            (renaming_keyword)
            (identifier)))))))

================================================================================
The renaming keywords stay identifiers in a prose field
================================================================================

description:
  Use it as a library, hiding the details it requires now.

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
Signatures entries keep their generic node kinds
================================================================================

library indef
  signatures:
    Str
    Data.Str.Encoding

--------------------------------------------------------------------------------

(cabal
  (sections
    (library
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (module_name)))))))
