tree-sitter-cabal/test/corpus/indentations.txt
================================================================================
Indentation before sections
================================================================================

cabal-version: 1.0
foo:
  tata
  titi
  tutu

flag bar
  hoge: fuga

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier))))
  (sections
    (flag
      (section_type)
      (section_name)
      (property_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Indentation between sections
================================================================================

cabal-version: 1.0
foo: tata titi tutu

library
  hoge: fuga
    piyo

executable foo
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)))))
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))
